// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Snapshot Tests renders a basic Switch checked 1`] = `
<div>
  <div
    class="ms-Switch-root checked"
    id="switch-1"
  >
    <div
      class="ms-Switch-track"
    />
    <div
      class=""
      style="transform: translate(100%); transition: transform .1s cubic-bezier(0.33, 0.0, 0.67, 1), opacity .1s cubic-bezier(0.33, 0.0, 0.67, 1);"
    >
      <div
        class="ms-Switch-thumb"
      />
    </div>
    <input
      checked=""
      class=""
      readonly=""
      role="switch"
      type="checkbox"
    />
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Switch Snapshot Tests renders a basic Switch unchecked 1`] = `
<div>
  <div
    class="ms-Switch-root"
    id="switch-1"
  >
    <div
      class="ms-Switch-track"
    />
    <div
      class=""
      style="transform: translate(0%); transition: transform .1s cubic-bezier(0.33, 0.0, 0.67, 1), opacity .1s cubic-bezier(0.33, 0.0, 0.67, 1);"
    >
      <div
        class="ms-Switch-thumb"
      />
    </div>
    <input
      class=""
      readonly=""
      role="switch"
      type="checkbox"
    />
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Switch Snapshot Tests renders a disabled Switch checked 1`] = `
<div>
  <div
    class="ms-Switch-root checked"
    id="switch-1"
  >
    <div
      class="ms-Switch-track"
    />
    <div
      class=""
      style="transform: translate(100%); transition: transform .1s cubic-bezier(0.33, 0.0, 0.67, 1), opacity .1s cubic-bezier(0.33, 0.0, 0.67, 1);"
    >
      <div
        class="ms-Switch-thumb"
      />
    </div>
    <input
      checked=""
      class=""
      readonly=""
      role="switch"
      type="checkbox"
    />
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Switch Snapshot Tests renders a disabled Switch unchecked 1`] = `
<div>
  <div
    class="ms-Switch-root"
    id="switch-1"
  >
    <div
      class="ms-Switch-track"
    />
    <div
      class=""
      style="transform: translate(0%); transition: transform .1s cubic-bezier(0.33, 0.0, 0.67, 1), opacity .1s cubic-bezier(0.33, 0.0, 0.67, 1);"
    >
      <div
        class="ms-Switch-thumb"
      />
    </div>
    <input
      class=""
      readonly=""
      role="switch"
      type="checkbox"
    />
    <div
      class=""
    />
  </div>
</div>
`;
